fix element boundaries in navigation, fixes #258
When a section's title is really long, the wrapping anchor element's
height in the section navigation is expanded to fit the title. Then,
the navigation's list elements overlaps the section's blocks.

--- a/blocks/Courseware/css/courseware.less
+++ b/blocks/Courseware/css/courseware.less
@@ -304,6 +304,7 @@ section#courseware {
         padding: 0px;
         display: inline-block;
         border-radius: 2px;
+        overflow: hidden;
 
         &[data-icon=""]         { .bgImg(infopage,   "blue", 32); }
         &[data-icon="chat"]     { .bgImg(chat,       "blue", 32); }
